{
  "version": 4,
  "terraform_version": "1.1.7",
  "serial": 593,
  "lineage": "07e417f2-e97f-28a2-8fd6-4f9bc4b28841",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-039d4a5c0e90c2b44",
            "domain": "vpc",
            "id": "eipalloc-039d4a5c0e90c2b44",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-18-214-13-254.compute-1.amazonaws.com",
            "public_ip": "18.214.13.254",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Billing-Account": "1234567890",
              "Enviroment": "production",
              "Managed-By": "Terraform",
              "Name": "project16-EIP",
              "Owner-Email": "somex@tech.io"
            },
            "tags_all": {
              "Billing-Account": "1234567890",
              "Enviroment": "production",
              "Managed-By": "Terraform",
              "Name": "project16-EIP",
              "Owner-Email": "somex@tech.io"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.ig",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "ig",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:704771385539:internet-gateway/igw-046ad9f9b4d0b561e",
            "id": "igw-046ad9f9b4d0b561e",
            "owner_id": "704771385539",
            "tags": {
              "Billing-Account": "1234567890",
              "Enviroment": "production",
              "Managed-By": "Terraform",
              "Name": "vpc-0c7d465aa128d7636-IG!",
              "Owner-Email": "somex@tech.io"
            },
            "tags_all": {
              "Billing-Account": "1234567890",
              "Enviroment": "production",
              "Managed-By": "Terraform",
              "Name": "vpc-0c7d465aa128d7636-IG!",
              "Owner-Email": "somex@tech.io"
            },
            "vpc_id": "vpc-0c7d465aa128d7636"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "ext-alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:704771385539:loadbalancer/app/ext-alb/7d1089db65a7aac3",
            "arn_suffix": "app/ext-alb/7d1089db65a7aac3",
            "desync_mitigation_mode": "defensive",
            "dns_name": "ext-alb-377535.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:704771385539:loadbalancer/app/ext-alb/7d1089db65a7aac3",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "ext-alb",
            "security_groups": [
              "sg-0e3fca17b4989cfca"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0bdb631af2c17f3ba"
              },
              {
                "subnet_id": "subnet-0f8d71c80dcb621c5"
              }
            ],
            "subnets": [
              "subnet-0bdb631af2c17f3ba",
              "subnet-0f8d71c80dcb621c5"
            ],
            "tags": {
              "Billing-Account": "1234567890",
              "Enviroment": "production",
              "Managed-By": "Terraform",
              "Name": "ACS-ext-alb",
              "Owner-Email": "somex@tech.io"
            },
            "tags_all": {
              "Billing-Account": "1234567890",
              "Enviroment": "production",
              "Managed-By": "Terraform",
              "Name": "ACS-ext-alb",
              "Owner-Email": "somex@tech.io"
            },
            "vpc_id": "vpc-0c7d465aa128d7636",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.ext-alb-sg",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available",
            "random_shuffle.az_list"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "ialb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:704771385539:loadbalancer/app/ialb/27a0f352c15968c9",
            "arn_suffix": "app/ialb/27a0f352c15968c9",
            "desync_mitigation_mode": "defensive",
            "dns_name": "internal-ialb-646617419.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:704771385539:loadbalancer/app/ialb/27a0f352c15968c9",
            "idle_timeout": 60,
            "internal": true,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "ialb",
            "security_groups": [
              "sg-0ad59385f762b4336"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-055e5e1357ca7bb0f"
              },
              {
                "subnet_id": "subnet-08e0d8a93cae1d5f2"
              }
            ],
            "subnets": [
              "subnet-055e5e1357ca7bb0f",
              "subnet-08e0d8a93cae1d5f2"
            ],
            "tags": {
              "Billing-Account": "1234567890",
              "Enviroment": "production",
              "Managed-By": "Terraform",
              "Name": "ACS-int-alb",
              "Owner-Email": "somex@tech.io"
            },
            "tags_all": {
              "Billing-Account": "1234567890",
              "Enviroment": "production",
              "Managed-By": "Terraform",
              "Name": "ACS-int-alb",
              "Owner-Email": "somex@tech.io"
            },
            "vpc_id": "vpc-0c7d465aa128d7636",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.int-alb-sg",
            "aws_subnet.private",
            "aws_vpc.main",
            "data.aws_availability_zones.available",
            "random_shuffle.az_list"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "nginx-listner",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:704771385539:listener/app/ext-alb/7d1089db65a7aac3/a2286a0198556565",
            "certificate_arn": "arn:aws:acm:us-east-1:704771385539:certificate/db8ba285-91ff-40bc-a337-0ab05534fa00",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:704771385539:targetgroup/nginx-tgt/9e77cd80b67578d7",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:704771385539:listener/app/ext-alb/7d1089db65a7aac3/a2286a0198556565",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:704771385539:loadbalancer/app/ext-alb/7d1089db65a7aac3",
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_acm_certificate.somdev",
            "aws_acm_certificate_validation.somdev",
            "aws_lb.ext-alb",
            "aws_lb_target_group.nginx-tgt",
            "aws_route53_record.somdev",
            "aws_security_group.ext-alb-sg",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available",
            "data.aws_route53_zone.somdev",
            "random_shuffle.az_list"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "web-listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:704771385539:listener/app/ialb/27a0f352c15968c9/3aa1c2adcd070b6d",
            "certificate_arn": "arn:aws:acm:us-east-1:704771385539:certificate/db8ba285-91ff-40bc-a337-0ab05534fa00",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:704771385539:targetgroup/wordpress-tgt/42743b9d1326f106",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:704771385539:listener/app/ialb/27a0f352c15968c9/3aa1c2adcd070b6d",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:704771385539:loadbalancer/app/ialb/27a0f352c15968c9",
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_acm_certificate.somdev",
            "aws_acm_certificate_validation.somdev",
            "aws_lb.ialb",
            "aws_lb_target_group.wordpress-tgt",
            "aws_route53_record.somdev",
            "aws_security_group.int-alb-sg",
            "aws_subnet.private",
            "aws_vpc.main",
            "data.aws_availability_zones.available",
            "data.aws_route53_zone.somdev",
            "random_shuffle.az_list"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "tooling-listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:704771385539:targetgroup/tooling-tgt/c8c3f2758b018257",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:704771385539:listener-rule/app/ialb/27a0f352c15968c9/3aa1c2adcd070b6d/c8b94ac97c8b9e46",
            "condition": [
              {
                "host_header": [
                  {
                    "values": [
                      "tooling.somdev.ga"
                    ]
                  }
                ],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:704771385539:listener-rule/app/ialb/27a0f352c15968c9/3aa1c2adcd070b6d/c8b94ac97c8b9e46",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:704771385539:listener/app/ialb/27a0f352c15968c9/3aa1c2adcd070b6d",
            "priority": 99,
            "tags": null,
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_acm_certificate.somdev",
            "aws_acm_certificate_validation.somdev",
            "aws_lb.ialb",
            "aws_lb_listener.web-listener",
            "aws_lb_target_group.tooling-tgt",
            "aws_lb_target_group.wordpress-tgt",
            "aws_route53_record.somdev",
            "aws_security_group.int-alb-sg",
            "aws_subnet.private",
            "aws_vpc.main",
            "data.aws_availability_zones.available",
            "data.aws_route53_zone.somdev",
            "random_shuffle.az_list"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "nginx-tgt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:704771385539:targetgroup/nginx-tgt/9e77cd80b67578d7",
            "arn_suffix": "targetgroup/nginx-tgt/9e77cd80b67578d7",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 10,
                "matcher": "200",
                "path": "/healthstatus",
                "port": "traffic-port",
                "protocol": "HTTPS",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:704771385539:targetgroup/nginx-tgt/9e77cd80b67578d7",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "nginx-tgt",
            "port": 443,
            "protocol": "HTTPS",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0c7d465aa128d7636"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "tooling-tgt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:704771385539:targetgroup/tooling-tgt/c8c3f2758b018257",
            "arn_suffix": "targetgroup/tooling-tgt/c8c3f2758b018257",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 10,
                "matcher": "200",
                "path": "/healthstatus",
                "port": "traffic-port",
                "protocol": "HTTPS",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:704771385539:targetgroup/tooling-tgt/c8c3f2758b018257",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "tooling-tgt",
            "port": 443,
            "protocol": "HTTPS",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0c7d465aa128d7636"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "wordpress-tgt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:704771385539:targetgroup/wordpress-tgt/42743b9d1326f106",
            "arn_suffix": "targetgroup/wordpress-tgt/42743b9d1326f106",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 10,
                "matcher": "200",
                "path": "/healthstatus",
                "port": "traffic-port",
                "protocol": "HTTPS",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:704771385539:targetgroup/wordpress-tgt/42743b9d1326f106",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "wordpress-tgt",
            "port": 443,
            "protocol": "HTTPS",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0c7d465aa128d7636"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-039d4a5c0e90c2b44",
            "connectivity_type": "public",
            "id": "nat-062e8c6425a6ce6f2",
            "network_interface_id": "eni-01bc863903190b4a8",
            "private_ip": "172.16.75.70",
            "public_ip": "18.214.13.254",
            "subnet_id": "subnet-0f8d71c80dcb621c5",
            "tags": {
              "Billing-Account": "1234567890",
              "Enviroment": "production",
              "Managed-By": "Terraform",
              "Name": "project16-Nat",
              "Owner-Email": "somex@tech.io"
            },
            "tags_all": {
              "Billing-Account": "1234567890",
              "Enviroment": "production",
              "Managed-By": "Terraform",
              "Name": "project16-Nat",
              "Owner-Email": "somex@tech.io"
            }
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.ig",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available",
            "random_shuffle.az_list"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "private-rtb-route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-093720281b3a1709e1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-062e8c6425a6ce6f2",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-093720281b3a1709e",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.ig",
            "aws_nat_gateway.nat",
            "aws_route_table.private-rtb",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available",
            "random_shuffle.az_list"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public-rtb-route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-046ad9f9b4d0b561e",
            "id": "r-rtb-0ce03a10d1e8763a11080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0ce03a10d1e8763a1",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.ig",
            "aws_route_table.public-rtb",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private-rtb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:704771385539:route-table/rtb-093720281b3a1709e",
            "id": "rtb-093720281b3a1709e",
            "owner_id": "704771385539",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Billing-Account": "1234567890",
              "Enviroment": "production",
              "Managed-By": "Terraform",
              "Name": "project16-Private-Route-Table",
              "Owner-Email": "somex@tech.io"
            },
            "tags_all": {
              "Billing-Account": "1234567890",
              "Enviroment": "production",
              "Managed-By": "Terraform",
              "Name": "project16-Private-Route-Table",
              "Owner-Email": "somex@tech.io"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c7d465aa128d7636"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-rtb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:704771385539:route-table/rtb-0ce03a10d1e8763a1",
            "id": "rtb-0ce03a10d1e8763a1",
            "owner_id": "704771385539",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Billing-Account": "1234567890",
              "Enviroment": "production",
              "Managed-By": "Terraform",
              "Name": "project16-Public-Route-Table",
              "Owner-Email": "somex@tech.io"
            },
            "tags_all": {
              "Billing-Account": "1234567890",
              "Enviroment": "production",
              "Managed-By": "Terraform",
              "Name": "project16-Public-Route-Table",
              "Owner-Email": "somex@tech.io"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c7d465aa128d7636"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-subnets-assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d96858769d4b2212",
            "route_table_id": "rtb-093720281b3a1709e",
            "subnet_id": "subnet-08e0d8a93cae1d5f2"
          },
          "dependencies": [
            "aws_route_table.private-rtb",
            "aws_subnet.private",
            "aws_vpc.main",
            "data.aws_availability_zones.available",
            "random_shuffle.az_list"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a13d16141657d01a",
            "route_table_id": "rtb-093720281b3a1709e",
            "subnet_id": "subnet-055e5e1357ca7bb0f"
          },
          "dependencies": [
            "aws_route_table.private-rtb",
            "aws_subnet.private",
            "aws_vpc.main",
            "data.aws_availability_zones.available",
            "random_shuffle.az_list"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07019ba20a793b5f3",
            "route_table_id": "rtb-093720281b3a1709e",
            "subnet_id": "subnet-039ca4fb16fd6abaa"
          },
          "dependencies": [
            "aws_route_table.private-rtb",
            "aws_subnet.private",
            "aws_vpc.main",
            "data.aws_availability_zones.available",
            "random_shuffle.az_list"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f8cc4d5d3c1d9521",
            "route_table_id": "rtb-093720281b3a1709e",
            "subnet_id": "subnet-0e9f934ce9e3fe3a9"
          },
          "dependencies": [
            "aws_route_table.private-rtb",
            "aws_subnet.private",
            "aws_vpc.main",
            "data.aws_availability_zones.available",
            "random_shuffle.az_list"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-subnets-assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02e1d00ab04ae0860",
            "route_table_id": "rtb-0ce03a10d1e8763a1",
            "subnet_id": "subnet-0f8d71c80dcb621c5"
          },
          "dependencies": [
            "aws_route_table.public-rtb",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available",
            "random_shuffle.az_list"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04c2eb4dc777190dd",
            "route_table_id": "rtb-0ce03a10d1e8763a1",
            "subnet_id": "subnet-0bdb631af2c17f3ba"
          },
          "dependencies": [
            "aws_route_table.public-rtb",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available",
            "random_shuffle.az_list"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:704771385539:security-group/sg-0d9dc21497c989400",
            "description": "Allow incoming HTTP connections.",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d9dc21497c989400",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "vpc_web_sg",
            "name_prefix": "",
            "owner_id": "704771385539",
            "revoke_rules_on_delete": false,
            "tags": {
              "Billing-Account": "1234567890",
              "Enviroment": "production",
              "Managed-By": "Terraform",
              "Name": "Bastion-SG",
              "Owner-Email": "somex@tech.io"
            },
            "tags_all": {
              "Billing-Account": "1234567890",
              "Enviroment": "production",
              "Managed-By": "Terraform",
              "Name": "Bastion-SG",
              "Owner-Email": "somex@tech.io"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c7d465aa128d7636"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "datalayer-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:704771385539:security-group/sg-0fdca9ca311e6d790",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0fdca9ca311e6d790",
            "ingress": [],
            "name": "datalayer-sg",
            "name_prefix": "",
            "owner_id": "704771385539",
            "revoke_rules_on_delete": false,
            "tags": {
              "Billing-Account": "1234567890",
              "Enviroment": "production",
              "Managed-By": "Terraform",
              "Name": "datalayer-sg",
              "Owner-Email": "somex@tech.io"
            },
            "tags_all": {
              "Billing-Account": "1234567890",
              "Enviroment": "production",
              "Managed-By": "Terraform",
              "Name": "datalayer-sg",
              "Owner-Email": "somex@tech.io"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c7d465aa128d7636"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ext-alb-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:704771385539:security-group/sg-0e3fca17b4989cfca",
            "description": "Allow TLS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e3fca17b4989cfca",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "ext-alb-sg",
            "name_prefix": "",
            "owner_id": "704771385539",
            "revoke_rules_on_delete": false,
            "tags": {
              "Billing-Account": "1234567890",
              "Enviroment": "production",
              "Managed-By": "Terraform",
              "Name": "ext-alb-sg",
              "Owner-Email": "somex@tech.io"
            },
            "tags_all": {
              "Billing-Account": "1234567890",
              "Enviroment": "production",
              "Managed-By": "Terraform",
              "Name": "ext-alb-sg",
              "Owner-Email": "somex@tech.io"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c7d465aa128d7636"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "int-alb-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:704771385539:security-group/sg-0ad59385f762b4336",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ad59385f762b4336",
            "ingress": [],
            "name": "my-alb-sg",
            "name_prefix": "",
            "owner_id": "704771385539",
            "revoke_rules_on_delete": false,
            "tags": {
              "Billing-Account": "1234567890",
              "Enviroment": "production",
              "Managed-By": "Terraform",
              "Name": "int-alb-sg",
              "Owner-Email": "somex@tech.io"
            },
            "tags_all": {
              "Billing-Account": "1234567890",
              "Enviroment": "production",
              "Managed-By": "Terraform",
              "Name": "int-alb-sg",
              "Owner-Email": "somex@tech.io"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c7d465aa128d7636"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "nginx-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:704771385539:security-group/sg-05ae50d6cb7f89529",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05ae50d6cb7f89529",
            "ingress": [],
            "name": "nginx-sg",
            "name_prefix": "",
            "owner_id": "704771385539",
            "revoke_rules_on_delete": false,
            "tags": {
              "Billing-Account": "1234567890",
              "Enviroment": "production",
              "Managed-By": "Terraform",
              "Name": "nginx-SG",
              "Owner-Email": "somex@tech.io"
            },
            "tags_all": {
              "Billing-Account": "1234567890",
              "Enviroment": "production",
              "Managed-By": "Terraform",
              "Name": "nginx-SG",
              "Owner-Email": "somex@tech.io"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c7d465aa128d7636"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "webserver-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:704771385539:security-group/sg-047b1dc15b9f235ec",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-047b1dc15b9f235ec",
            "ingress": [],
            "name": "my-asg-sg",
            "name_prefix": "",
            "owner_id": "704771385539",
            "revoke_rules_on_delete": false,
            "tags": {
              "Billing-Account": "1234567890",
              "Enviroment": "production",
              "Managed-By": "Terraform",
              "Name": "webserver-sg",
              "Owner-Email": "somex@tech.io"
            },
            "tags_all": {
              "Billing-Account": "1234567890",
              "Enviroment": "production",
              "Managed-By": "Terraform",
              "Name": "webserver-sg",
              "Owner-Email": "somex@tech.io"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c7d465aa128d7636"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "inbound-bastion-ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 22,
            "id": "sgrule-2544320724",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-05ae50d6cb7f89529",
            "self": false,
            "source_security_group_id": "sg-0d9dc21497c989400",
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.bastion_sg",
            "aws_security_group.nginx-sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "inbound-ialb-https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 443,
            "id": "sgrule-1041981616",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0ad59385f762b4336",
            "self": false,
            "source_security_group_id": "sg-05ae50d6cb7f89529",
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.int-alb-sg",
            "aws_security_group.nginx-sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "inbound-mysql-bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 3306,
            "id": "sgrule-3158792352",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0fdca9ca311e6d790",
            "self": false,
            "source_security_group_id": "sg-0d9dc21497c989400",
            "to_port": 3306,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.bastion_sg",
            "aws_security_group.datalayer-sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "inbound-mysql-ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 22,
            "id": "sgrule-202565071",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0fdca9ca311e6d790",
            "self": false,
            "source_security_group_id": "sg-0d9dc21497c989400",
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.bastion_sg",
            "aws_security_group.datalayer-sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "inbound-mysql-webserver",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 3306,
            "id": "sgrule-2793409184",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0fdca9ca311e6d790",
            "self": false,
            "source_security_group_id": "sg-047b1dc15b9f235ec",
            "to_port": 3306,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.datalayer-sg",
            "aws_security_group.webserver-sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "inbound-nfs-port",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 2049,
            "id": "sgrule-893819434",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0fdca9ca311e6d790",
            "self": false,
            "source_security_group_id": "sg-047b1dc15b9f235ec",
            "to_port": 2049,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.datalayer-sg",
            "aws_security_group.webserver-sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "inbound-nfs-ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 22,
            "id": "sgrule-383104975",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0fdca9ca311e6d790",
            "self": false,
            "source_security_group_id": "sg-047b1dc15b9f235ec",
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.datalayer-sg",
            "aws_security_group.webserver-sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "inbound-nginx-http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 443,
            "id": "sgrule-2065432029",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-05ae50d6cb7f89529",
            "self": false,
            "source_security_group_id": "sg-0e3fca17b4989cfca",
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.ext-alb-sg",
            "aws_security_group.nginx-sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "inbound-web-https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 443,
            "id": "sgrule-2220116624",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-047b1dc15b9f235ec",
            "self": false,
            "source_security_group_id": "sg-0ad59385f762b4336",
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.int-alb-sg",
            "aws_security_group.webserver-sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "inbound-web-ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 22,
            "id": "sgrule-722826322",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-047b1dc15b9f235ec",
            "self": false,
            "source_security_group_id": "sg-0d9dc21497c989400",
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.bastion_sg",
            "aws_security_group.webserver-sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:704771385539:subnet/subnet-08e0d8a93cae1d5f2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1f",
            "availability_zone_id": "use1-az5",
            "cidr_block": "172.16.0.0/20",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08e0d8a93cae1d5f2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "704771385539",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Billing-Account": "1234567890",
              "Enviroment": "production",
              "Managed-By": "Terraform",
              "Name": "PrivateSubnet-0",
              "Owner-Email": "somex@tech.io"
            },
            "tags_all": {
              "Billing-Account": "1234567890",
              "Enviroment": "production",
              "Managed-By": "Terraform",
              "Name": "PrivateSubnet-0",
              "Owner-Email": "somex@tech.io"
            },
            "vpc_id": "vpc-0c7d465aa128d7636"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available",
            "random_shuffle.az_list"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:704771385539:subnet/subnet-055e5e1357ca7bb0f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "172.16.16.0/20",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-055e5e1357ca7bb0f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "704771385539",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Billing-Account": "1234567890",
              "Enviroment": "production",
              "Managed-By": "Terraform",
              "Name": "PrivateSubnet-1",
              "Owner-Email": "somex@tech.io"
            },
            "tags_all": {
              "Billing-Account": "1234567890",
              "Enviroment": "production",
              "Managed-By": "Terraform",
              "Name": "PrivateSubnet-1",
              "Owner-Email": "somex@tech.io"
            },
            "vpc_id": "vpc-0c7d465aa128d7636"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available",
            "random_shuffle.az_list"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:704771385539:subnet/subnet-039ca4fb16fd6abaa",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "172.16.32.0/20",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-039ca4fb16fd6abaa",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "704771385539",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Billing-Account": "1234567890",
              "Enviroment": "production",
              "Managed-By": "Terraform",
              "Name": "PrivateSubnet-2",
              "Owner-Email": "somex@tech.io"
            },
            "tags_all": {
              "Billing-Account": "1234567890",
              "Enviroment": "production",
              "Managed-By": "Terraform",
              "Name": "PrivateSubnet-2",
              "Owner-Email": "somex@tech.io"
            },
            "vpc_id": "vpc-0c7d465aa128d7636"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available",
            "random_shuffle.az_list"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:704771385539:subnet/subnet-0e9f934ce9e3fe3a9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1e",
            "availability_zone_id": "use1-az3",
            "cidr_block": "172.16.48.0/20",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e9f934ce9e3fe3a9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "704771385539",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Billing-Account": "1234567890",
              "Enviroment": "production",
              "Managed-By": "Terraform",
              "Name": "PrivateSubnet-3",
              "Owner-Email": "somex@tech.io"
            },
            "tags_all": {
              "Billing-Account": "1234567890",
              "Enviroment": "production",
              "Managed-By": "Terraform",
              "Name": "PrivateSubnet-3",
              "Owner-Email": "somex@tech.io"
            },
            "vpc_id": "vpc-0c7d465aa128d7636"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available",
            "random_shuffle.az_list"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:704771385539:subnet/subnet-0f8d71c80dcb621c5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1f",
            "availability_zone_id": "use1-az5",
            "cidr_block": "172.16.64.0/20",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f8d71c80dcb621c5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "704771385539",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Billing-Account": "1234567890",
              "Enviroment": "production",
              "Managed-By": "Terraform",
              "Name": "PublicSubnet-0",
              "Owner-Email": "somex@tech.io"
            },
            "tags_all": {
              "Billing-Account": "1234567890",
              "Enviroment": "production",
              "Managed-By": "Terraform",
              "Name": "PublicSubnet-0",
              "Owner-Email": "somex@tech.io"
            },
            "vpc_id": "vpc-0c7d465aa128d7636"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available",
            "random_shuffle.az_list"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:704771385539:subnet/subnet-0bdb631af2c17f3ba",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "172.16.80.0/20",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bdb631af2c17f3ba",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "704771385539",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Billing-Account": "1234567890",
              "Enviroment": "production",
              "Managed-By": "Terraform",
              "Name": "PublicSubnet-1",
              "Owner-Email": "somex@tech.io"
            },
            "tags_all": {
              "Billing-Account": "1234567890",
              "Enviroment": "production",
              "Managed-By": "Terraform",
              "Name": "PublicSubnet-1",
              "Owner-Email": "somex@tech.io"
            },
            "vpc_id": "vpc-0c7d465aa128d7636"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available",
            "random_shuffle.az_list"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:704771385539:vpc/vpc-0c7d465aa128d7636",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.16.0.0/16",
            "default_network_acl_id": "acl-0bc71beb12cae9df6",
            "default_route_table_id": "rtb-08a65b6280e7faab5",
            "default_security_group_id": "sg-0a57da544b40d2fca",
            "dhcp_options_id": "dopt-0c238a32e44500382",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0c7d465aa128d7636",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-08a65b6280e7faab5",
            "owner_id": "704771385539",
            "tags": {
              "Billing-Account": "1234567890",
              "Enviroment": "production",
              "Managed-By": "Terraform",
              "Name": "Prod_vpc",
              "Owner-Email": "somex@tech.io"
            },
            "tags_all": {
              "Billing-Account": "1234567890",
              "Enviroment": "production",
              "Managed-By": "Terraform",
              "Name": "Prod_vpc",
              "Owner-Email": "somex@tech.io"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}